syntax = "proto3";

option java_multiple_files = true;

package com.example.grpc;


message GetUserRequest {
  string name = 1;
}

message GetUserResponse {
  int64 id = 1;
  string name = 2;
  string role = 3;
}


service GetUserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}


